--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
+    "vue-svg-loader": "^0.16.0",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.0.0"
   },
   "eslintConfig": {
     "root": true,
