--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,10 +19,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
     "vue-svg-loader": "^0.16.0",
-    "vue-template-compiler": "^2.6.14",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.0.0"
   },
   "eslintConfig": {
